[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://Resources/Img/GUI/buttons_map.png" type="Texture" id=2]
[ext_resource path="res://Resources/Img/GUI/btn_dir_jump.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Helpers/lvl_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Resources/Img/GUI/HUD_map.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Helpers/GUI_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Helpers/screen_text.tres" type="DynamicFont" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 67, 66, 66 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 67, 67, 66, 66 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 67, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 134, 66, 66 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 67, 134, 66, 66 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 134, 67, 66, 66 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 201, 67, 66, 66 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 134, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 201, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 134, 201, 66, 66 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 201, 201, 66, 66 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 201, 66, 66 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 67, 201, 66, 66 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 158, 135, 23, 45 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 2, 14, 244, 15 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 2, 29, 244, 15 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 2, 44, 171, 13 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 2, 57, 171, 13 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 2, 2, 8, 10 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 2, 70, 276, 11 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 2, 81, 276, 11 )

[sub_resource type="Animation" id=23]
resource_name = "msg_show"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ActionBtns" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.346598
margin_bottom = -0.346619
__meta__ = {
"_edit_lock_": true
}

[node name="TouchLeft" type="TouchScreenButton" parent="ActionBtns"]
position = Vector2( 31.7209, 490 )
normal = SubResource( 1 )
pressed = SubResource( 2 )
passby_press = true
action = "ui_left"
visibility_mode = 1

[node name="TouchRight" type="TouchScreenButton" parent="ActionBtns"]
position = Vector2( 161.721, 490 )
normal = SubResource( 3 )
pressed = SubResource( 4 )
passby_press = true
action = "ui_right"
visibility_mode = 1

[node name="TouchUp" type="TouchScreenButton" parent="ActionBtns"]
position = Vector2( 98, 420 )
normal = SubResource( 5 )
pressed = SubResource( 6 )
passby_press = true
action = "ui_up"
visibility_mode = 1

[node name="TouchUpLeft" type="TouchScreenButton" parent="ActionBtns"]
position = Vector2( 8, 400 )
normal = ExtResource( 3 )
passby_press = true
action = "ui_left_up"
visibility_mode = 1

[node name="TouchUpRight" type="TouchScreenButton" parent="ActionBtns"]
position = Vector2( 165.721, 401 )
normal = ExtResource( 3 )
passby_press = true
action = "ui_right_up"
visibility_mode = 1

[node name="TouchPick" type="TouchScreenButton" parent="ActionBtns"]
position = Vector2( 798.721, 480 )
normal = SubResource( 7 )
pressed = SubResource( 8 )
passby_press = true
action = "ui_accept"
visibility_mode = 1

[node name="TouchAttack" type="TouchScreenButton" parent="ActionBtns"]
position = Vector2( 896, 447 )
scale = Vector2( 1.5, 1.5 )
normal = SubResource( 9 )
pressed = SubResource( 10 )
passby_press = true
action = "ui_attack"
visibility_mode = 1

[node name="TouchHeal" type="TouchScreenButton" parent="ActionBtns"]
position = Vector2( 830, 372.347 )
normal = SubResource( 11 )
pressed = SubResource( 12 )
action = "ui_action_1"
visibility_mode = 1

[node name="TouchBlock" type="TouchScreenButton" parent="ActionBtns"]
position = Vector2( 927, 352.347 )
normal = SubResource( 13 )
pressed = SubResource( 14 )
action = "ui_block"
visibility_mode = 1

[node name="TouchOptions" type="TouchScreenButton" parent="ActionBtns"]
position = Vector2( 970, 30 )
normal = SubResource( 15 )
passby_press = true
action = "ui_cancel"
visibility_mode = 1

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Lvl" type="Control" parent="HUD"]
margin_left = 30.0
margin_top = 20.0
margin_right = 90.0
margin_bottom = 44.0

[node name="lvl_count" type="Label" parent="HUD/Lvl"]
margin_left = -3.72092
margin_top = 4.0
margin_right = 30.2791
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "lvl. 1"
align = 1
valign = 1

[node name="HPBar" type="TextureProgress" parent="HUD"]
editor/display_folded = true
margin_left = 31.0
margin_top = 46.0
margin_right = 275.0
margin_bottom = 61.0
value = 100.0
texture_under = SubResource( 16 )
texture_progress = SubResource( 17 )

[node name="Tween" type="Tween" parent="HUD/HPBar"]

[node name="StaminaBar" type="TextureProgress" parent="HUD"]
margin_left = 31.0
margin_top = 71.0
margin_right = 202.0
margin_bottom = 84.0
max_value = 60.0
value = 60.0
texture_under = SubResource( 18 )
texture_progress = SubResource( 19 )

[node name="Tween" type="Tween" parent="HUD/StaminaBar"]

[node name="RegenerationDelay" type="Timer" parent="HUD/StaminaBar"]
wait_time = 0.3

[node name="Souls" type="Control" parent="HUD"]
editor/display_folded = true
margin_left = 291.0
margin_top = 46.0
margin_right = 340.0
margin_bottom = 70.0

[node name="TextureRect" type="TextureRect" parent="HUD/Souls"]
margin_left = -70.0
margin_top = 25.0
margin_right = -54.0
margin_bottom = 43.0
texture = SubResource( 20 )
expand = true

[node name="SoulsIndicator" type="Label" parent="HUD/Souls"]
editor/display_folded = true
margin_left = -50.279
margin_top = 24.0
margin_right = -10.279
margin_bottom = 52.0
custom_fonts/font = ExtResource( 6 )
text = "30"

[node name="Tween" type="Tween" parent="HUD/Souls/SoulsIndicator"]

[node name="EXPBar" type="TextureProgress" parent="HUD"]
editor/display_folded = true
visible = false
margin_left = 31.0
margin_top = 108.0
margin_right = 307.0
margin_bottom = 119.0
value = 80.0
texture_under = SubResource( 21 )
texture_progress = SubResource( 22 )

[node name="Tween" type="Tween" parent="HUD/EXPBar"]

[node name="DisplayTextMsg" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -78.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="DisplayTextMsg"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.733333, 0.733333, 0.733333, 1 )
text = "Your Concentration is too low"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DisplayTextMsg"]
anims/msg_show = SubResource( 23 )

